Добавил описание класса Evolution

--- a/Диплом.tex
+++ b/Диплом.tex
@@ -519,6 +519,155 @@ code << :Input
 out #=> [:Output, :Output]
 \end{verbatim}
 
+\subsection{Генератор}
+Разработчик указывает требования к новой программе с помощью оценочной функции и
+функции останова, с помощью которых генератор создаёт новый $D^2NA$-код
+множеством итерация из трёх шагов:
+\begin{enumerate}
+  \item Простое копирование $D2NA$-кода, чтобы получить множество нужного
+        размера.
+  \item Внесение случайных изменений в каждый экземпляр $D2NA$-кода.
+  \item Проверка результата оценочной функцией и удаление программ, набравших
+        минимум баллов.
+\end{enumerate}
+
+Пакет генератора требует установки виртуальной машины для $D2NA$ и работает с
+ней через её библиотеку для языка Ruby.
+
+Генератор можно разделить на четыре независимые части:
+\begin{itemize}
+  \item \textbf{Evolution} — установка настроек генератора и управление
+        процессом создания новой программы.
+  \item \textbf{MutableCode} — изменение $D2NA$-кода, в том числе внесение
+        случайных изменений.
+  \item \textbf{Tests} — макоязык (DSL, Domain-Specific Language) для записи
+        оценочной функции и тестирование промежуточного $D2NA$-кода.
+  \item \textbf{Population} — упорядоченное хранение промежуточных программ и
+        удаление на каждом шаге $D2NA$-кода получившего минимальную оценку в
+        оценочной функции.
+\end{itemize}
+
+\subsubsection{Настройка генератора}
+Настройка генератора осуществляется с помощью специального макроязыка
+(DSL, Domain-Specific Language) — библиотеки с набором методов для языка
+программирования Ruby.
+
+Основа генератора — класс \texttt{D2NA::Evolution}. Чтобы описать задание для
+генератора нужно написать программу на языке Ruby, подключить библиотеку
+\texttt{d2na/evolution} и создать в ней экземпляр этого класса:
+
+\begin{verbatim}
+require 'd2na/evolution'
+e = D2NA::Evolution.new do
+  # Настройки генератора и оценочная функция
+end
+\end{verbatim}
+
+Поскольку Ruby — интерпретируемый язык программирования, то инструкции
+генератору можно писать с помощью простого текстового редактора и запуска
+текстовый файл в программе \texttt{ruby} версии 1.9.1:
+
+\begin{verbatim}
+~$ ruby evolution.rb
+\end{verbatim}
+
+Класс \texttt{D2NA::Evolution} имеет набор методов для настройки эволюции:
+\begin{itemize}
+  \item \texttt{protocode(code)} — задаёт \texttt{code} как первое поколение
+        программы для начала итераций. В основном разработчик в первом поколении
+        задаёт только имена входящих и исходящий сигналов.
+        Вызванный без параметров возвращает текущее значение.
+  \item \texttt{min\_population(count)} — задаёт \texttt{size}, как минимальное
+        количество программ-кандидатов после каждой итерации. На первый итерации
+        $D^2NA$-код, заданный в \texttt{protocode}, клонируется до размера
+        минимальной популяции.
+        Вызванный без параметров возвращает текущее значение.
+  \item \texttt{worker\_count(count)} — задаёт \texttt{size}, как количество
+        потоков, которые будут генерировать новую программу. Чтобы полностью
+        использовать потенциал современных процессоров мутация и тестирование
+        кода идёт в многопоточном режиме.
+        Вызванный без параметров возвращает текущее значение.
+  \item \texttt{selection(description, options, \&block)} — добавляет
+        \texttt{block} как оценочную функцию, которой конечный $D^2NA$-код
+        должен соответствовать. Аргумент \texttt{description} может содержать
+        описание оценочной функции, а \texttt{options} — хеш с параметром
+        \texttt{priority}, в котором содержится цифровой приоритет этой
+        оценочной над другими.
+  \item \texttt{end\_if(\&block)} — задаёт \texttt{block}, как функцию
+        остановка. Переданный код будет вызываться в конце каждой итерации, и,
+        если он вернёт истинное значение, процесс генерации будет остановлен,
+        так как цель разработчика достигнута. Для разработчик имеется набор
+        функций, упрощающих задание функции останова:
+        \begin{itemize}
+          \item \texttt{success} — возвращает истинное значение, если все
+                требований оценочной функции выполнены.
+          \item \texttt{stagnation > }\textit{count} — возвращает истинное
+                значение, если значение оценочной функции не было улучшено за
+                последнее \textit{count} шагов.
+        \end{itemize}
+        Разработчик может объединять функции, например:
+        \texttt{success and stagnation > 10}.
+  \item \texttt{stagnation\_limit(maximum)} — задаёт \texttt{maximum}, как
+        максимальное количество шагов простоя. Если значение оценочной функции
+        не было улучшено за максимальное количество шагов простоя, то генерация
+        останавливается, поскольку генератор не способен создать требуемый код.
+        Вызванный без параметров возвращает текущее значение.
+\end{itemize}
+
+Так же класс \texttt{D2NA::Evolution} содержит методы для управления ходом
+генерации:
+\begin{itemize}
+  \item \texttt{step!} — делает следующую итерацию написания программы.
+  \item \texttt{next\_step?} — возвращает истинное значение, если функция
+        останова показала, что цель генерации ещё достигнута и требуются ещё
+        итерации.
+  \item \texttt{step} — возвращает количество уже выполненных итераций.
+  \item \texttt{stagnation} — возвращает количество последних шагов, за которые
+        не удалось улучшить результат оценочной функции.
+  \item \texttt{population} — возвращает популяцию программ, сгенерированных на
+        текущем шаге.
+  \item \texttt{old\_population} — возвращает популяцию программ, полученных на
+        предыдущем шаге.
+\end{itemize}
+
+\newpage
+В итоге типичная настройка генератора будет выглядеть как:
+\begin{verbatim}
+require 'd2na/evolution'
+
+e = D2NA::Evolution.new do
+  worker_count 4
+  
+  protocode do
+    # Входящие/исходящие сигналы согласно
+    # условиям задачи
+  end
+  
+  min_population 10
+  
+  selection "First" do
+    # Первая оценочная функция
+  end
+  selection "Second", priority: 2 do
+    # Вторая оценочная функция,
+    # более приоритетная
+  end
+  
+  end_if { success and stagnation > 10 }
+  
+  stagnation_limit 20
+end
+
+
+while e.next_step?
+  e.step!
+  # Выводим «!» при улучшении результата
+  # оценочной функции, иначе количество
+  # выполненных шагов.
+  0 == e.stagnation ? putc('!') : e.step
+end
+\end{verbatim}
+
 \newpage
 \section{Программная реализация}
 
