--- a/Аннотация.tex
+++ b/Аннотация.tex
@@ -1,5 +1,16 @@
-\documentclass[utf8]{eskdtext}
-\usepackage{eskdplain}
+\documentclass[a4paper,14pt]{extarticle}
+\usepackage[utf8]{inputenc}
+\usepackage[russian]{babel}
+\usepackage{indentfirst}
+
+\renewcommand{\baselinestretch}{1.5}
+\pagestyle{empty}
+
+\usepackage{geometry}
+\geometry{left=3cm}
+\geometry{right=2cm}
+\geometry{top=2cm}
+\geometry{bottom=2cm}
 
 \begin{document}
 
