Добавил описание Мутатора

--- a/Диплом.tex
+++ b/Диплом.tex
@@ -641,6 +641,8 @@ e = D2NA::Evolution.new do
   protocode do
     # Входящие/исходящие сигналы согласно
     # условиям задачи
+    input :Print
+    output :Ping, :Pong
   end
   
   min_population 10
@@ -665,6 +667,76 @@ while e.next_step?
   # оценочной функции, иначе количество
   # выполненных шагов.
   0 == e.stagnation ? putc('!') : e.step
+end
+\end{verbatim}
+
+\subsubsection{Мутатор}
+
+Чтобы вносить в уже созданный код изменения, в пакете генератора есть класс
+\texttt{D2NA::MutableCode}, который расширяется класс \texttt{D2NA::Code} из
+виртуальной машины, добавляя в него методы:
+\begin{itemize}
+  \item \texttt{modify(\&block)} — вносит набор изменений в код, указанные в
+        коде \texttt{block}, после чего восстанавливает кеши и компилирует
+        $D2NA$-код.
+  \item \texttt{clone} — возвращает полную копию объекта с данным $D^2NA$-кода.
+  \item \texttt{mutate!} — вносит случайные изменения в текущий $D^2NA$-код.
+        Параметры случайных изменений можно задать аргументов как хеш или
+        задать глобальной для всех вызовов \texttt{mutate!} с помощью свойства
+        объекта \texttt{mutation\_params}.
+  \item \texttt{to\_ruby} — возвращает текстовое представление загруженного
+        $D^2NA$-кода для сохранения в файл.
+\end{itemize}
+
+Возможные команды изменения $D^2NA$-кода, которые можно использовать
+внутри \texttt{modify}:
+\begin{itemize}
+  \item \texttt{add\_command(rule, command, param)} — вставляет в
+        правило с номером \texttt{rule} команду с именем
+        \texttt{command} для переменной или исходящего сигнала
+        \texttt{param}.
+  \item \texttt{remove\_command(position, rule)} — удаляет команду. Либо по
+        порядковому номеру \texttt{position} во всём коде (если \texttt{rule}
+        не задан), либо в правиле с указанным в \texttt{rule} номером.
+  \item \texttt{add\_states(*states)} — добавляет в $D^2NA$-код переменные с
+        указанными в массиве \texttt{states} именами.
+  \item \texttt{remove\_state(name)} — удаляет из кода переменную с именем,
+        указанным в \texttt{name}, и все команды связанные с ней.
+\end{itemize}
+
+Параметры доступные в свойстве объекта \texttt{mutation\_params} для управления
+случайными изменениями в программе:
+
+\begin{itemize}
+  \item \texttt{max\_actions} — максимальное количество изменений при мутации.
+        Количество действий мутатора выбирается с помощью случайной величины
+        равномерно распределения.
+  \item \texttt{min\_actions} — минимальной количество изменений при мутации.
+  \item \texttt{max\_state\_actions} — максимальное количество внесённых
+        случайных команд с новой переменной после её добавления. Количество
+        выбирается с помощью случайной величины равномерно распределения.
+  \item \texttt{min\_state\_actions} — минимальное количество внесённых
+        случайных команд с новой переменной после её добавления.
+  \item \texttt{add} — вероятность добавления новой команды.
+  \item \texttt{remove} — вероятность удаления существующей команды.
+  \item \texttt{add\_state} — вероятность добавления новой переменной. После
+        добавления новой переменной будет добавлено случайное количество
+        команд её использующих.
+  \item \texttt{remove\_state} — вероятность удаления существующей переменной и
+        всех команд её использующих.
+\end{itemize}
+
+Разработчик может задать параметры мутации, с помощью метода \texttt{protocode}
+объекта \texttt{D2NA::Evolution}:
+
+\begin{verbatim}
+e = D2NA::Evolution.new do
+  protocode do
+    mutation_params[:max_actions] = 6
+    mutation_params[:min_actions] = 4
+    …
+  end
+  …
 end
 \end{verbatim}
 
