Добавил описание оценочной функции

--- a/Диплом.tex
+++ b/Диплом.tex
@@ -756,6 +756,131 @@ e = D2NA::Evolution.new do
 end
 \end{verbatim}
 
+\subsubsection{Оценочная функция}
+
+Задание оценочной функции — наиболее сложная задание для разработчика при
+использовании автоматической генерации программ с помощью генетических
+алгоритмов.
+
+К сожалению, нельзя использовать имеющиеся инструменты для автоматического
+тестирования, потому что они возвращают только два возможных значения: программа
+соответствует тестам или нет. Для генетического алгоритма, оценочная функция
+должна возвращать число, чтобы понять, что программа стала чуть больше 
+соответствовать тесту, даже если полностью его не проходит.
+
+Например, если нам нужно чтобы программа возвращала $1$, но одна программа в
+ответе вернула $0$, а другая — $-1$, то тесты должны показать, что первая
+программа больше соответствует описанными нами условиям.
+
+Исходя из описанных требований, в пакете генератора для $D^2NA$-кода есть набор
+удобных инструментов для задания оценочной функции в виде макроязыка (DSL,
+Domain-Specific Language).
+
+Для добавления оценочной функции в классе \texttt{D2NA::Evolution} есть метод
+\texttt{selection(description, options, \&block)}, который принимает описание
+теста, его настройки и код тестирования.
+
+При автоматическом написании программы, генератор может использовать несколько
+оценочных функция сразу. Разработчик может задать им разное описание, чтобы
+отличать их, и разный приоритет в настройках теста с помощью ключа
+\texttt{priority}, например:
+
+\begin{verbatim}
+e = D2NA::Evolution.new do
+  …
+  selection "Первая" do
+    # Код первой оценочной функции
+    …
+  end
+  selection "Первая", priority: 2 do
+    # Код второй оценочной функции,
+    # более приоритетной.
+    …
+  end
+end
+\end{verbatim}
+
+Код оценочной функции — это обычная программа на языке программирования Ruby.
+Проверки и требования для генерируемого кода, задаются с помощью набора методов:
+\begin{itemize}
+  \item \texttt{send(signals)} — посылает в тестируемый код все входящие сигналы
+        из массива \texttt{signals}.
+  \item \texttt{out} — возвращает массив исходящих сигналов, посланных текущим
+        тестируемым кодом.
+  \item \texttt{clear\_out!} — очищает буфер исходящих сигналов, возвращаемый
+        методов \texttt{out}.
+  \item \texttt{should(value)} — проверяет, чтобы значение \texttt{value} было
+        истинным, например, вызов \texttt{should out.length == 2} проверяет,
+        что тестируемая программа послала 2 исходящих сигнала (после начала
+        теста или последнего вызова \texttt{clear\_out!}).
+  \item \texttt{max(value)} — требует, чтобы тестируемая программа имела
+        максимальное значение \texttt{value}. То есть, программа с максимальное
+        значение \texttt{value} получить максимальную оценочную функцию, чтобы
+        остатся в следующущуй итерации.
+  \item \texttt{min(value)} — требует, чтобы тестируемая программа имела
+        минимальное значение \texttt{value}. Например, вызов
+        \texttt{min(out.length)} требует, чтобы $D^2NA$-код посылал минимум
+        исходящих сигналов.
+\end{itemize}
+
+Для упрощения работы разработчика, библиотека тестов имеет ряд методов,
+объединиящих вызов \texttt{should}, \texttt{min} и \texttt{max} для решения
+распространённых задач:
+\begin{itemize}
+  \item \texttt{out\_should\_be\_empty} — требует, чтобы тестируемая программа
+        не посылала ни один исходящий сигнал в начала теста или с последнего
+        вызова \texttt{clear\_out!}.
+  \item \texttt{out\_should(signals)} — принимает хеш имеющий в ключах имена
+        исходящих сигналов и в значения — их количество и проверяет, чтобы
+        в буфере исходящих сигналов \texttt{out} содержалось только указанные в
+        \texttt{signals} исходящие сигналы и только в указанном количестве.
+  \item \texttt{out\_should\_has(signals)} — нестрогий аналог\\
+        \texttt{out\_should}. Он принимает хеш имеющий в ключах имена
+        исходящих сигналов и в значения — их количество и проверяет, чтобы
+        в буфере исходящих сигналов \texttt{out} содержалось указанные в
+        \texttt{signals} исходящие сигналы и только в указанном количестве.
+        То есть, если тестируемая программа посылала исходящие сигналы не
+        указанные в \texttt{signals}, то это не будет считаться ошибкой.
+  \item \texttt{out\_should\_hasnt(signals)} — проверяет, чтобы в буфере
+        исходящих сигналов \texttt{out} не содержались сигналы указанные в
+        массиве \texttt{signals}.
+\end{itemize}
+
+Пример, оценочной функции для программы-сумматора, которая посылает исходящих
+сигналов \texttt{:C} столько, сколько в сумме пришло входящих сигналов
+\texttt{:A} и \texttt{:B}:
+
+\begin{verbatim}
+selection "Сумматор" do
+  out_should_be_empty
+  
+  send :A, :A
+  out_should :C => 2
+  
+  send :B, :B, :B
+  out_should :C => 5
+end
+\end{verbatim}
+
+Каждый метод проверки (\texttt{should}, \texttt{min}, \texttt{max},
+\texttt{out\_should}, \texttt{out\_should\_has}, \texttt{out\_should\_hasnt},
+\texttt{out\_should\_be\_empty}) может принимать приоритет проверки с помощью
+ключа \texttt{priority}.
+
+Например, в данном тесте, код посылающий лишний сигнал \texttt{:B} будет иметь
+меньшее значение оценочной функции, чем код, не посылающий нужный сигнал
+\texttt{:A}.
+
+\begin{verbatim}
+out_should_has   :A => 1
+out_should_hasnt :B, priority: 2
+\end{verbatim}
+
+Тест считается пройденным, только если выполнены все условиях в проверках
+\texttt{should}. Проверки \texttt{min} и \texttt{max} не учитываются в вызове
+метода \texttt{success} класс \texttt{D2NA::Evolution}, но по их результата
+тест может считаться пройденным лучше или хуже.
+
 \newpage
 \section{Программная реализация}
 
