Добавил описание популяции

--- a/Диплом.tex
+++ b/Диплом.tex
@@ -881,6 +881,47 @@ out_should_hasnt :B, priority: 2
 метода \texttt{success} класс \texttt{D2NA::Evolution}, но по их результата
 тест может считаться пройденным лучше или хуже.
 
+\subsubsection{Популяция}
+
+На каждой итерации, после клонирования и случайного изменения, программы на
+$D^2NA$ должны складывать в специальный массив-популяцию вместе со своими
+результатами оценочной функции.
+
+Хранится они должны по слоям — программы с одинаковыми результатом оценочной
+функции должны иметь один слой.
+
+После размещения, программы набравшие минимальное значение оценочной функции
+должны быть удалены по следующему алгоритму:
+
+\begin{enumerate}
+  \item Максимальный размер первого слоя (с наилучшему результатами оценочной
+        функции) вычисляется по формуле:\\
+        $L_0 = min\_population + (stagnation * stagnation\_grow)$.\\
+        Максимальный размер каждого последующего слоя равен половине от
+        предыдущего: $L_{x} = L_{x-1} / 2$
+  \item На каждом слое программы размещаются по уменьшению длины кода — самые
+        короткие в начале.
+  \item Программы не помещающиеся в максимальный размер слоя удаляются с конца
+        списка.
+\end{enumerate}
+
+В начале каждый итерации старая популяция копируется в переменную
+\texttt{old\_population}, в в переменной \texttt{population} создаётся новая.
+
+При этом, перед итерацией $D^2NA$-код набравший максимальное значение оценочной
+функции и имеющий минимальный размер исходного кода без изменений копируется
+в новую популяцию.
+
+Текущая популяция находится в свойстве \texttt{population} класса
+\texttt{D2NA::Evolution} и имеет набор методов:
+\begin{itemize}
+  \item \texttt{best} — возвращает лучший код с максимальным значение оценочной
+        функции и минимальный размером исходного кода (первый элемент первого
+        слоя).
+  \item \texttt{best\_result} — возвращает лучшее значение оценочной функции
+        (полученное для всех элементов первого слоя).
+\end{itemize}
+
 \newpage
 \section{Программная реализация}
 
