Добавил схему архитектуры генератора

--- a/Диплом.tex
+++ b/Диплом.tex
@@ -1,5 +1,7 @@
 \documentclass[utf8,a5paper,portrait,12pt]{eskdtext}
 \usepackage{eskdplain}
+\usepackage{pstricks}
+\usepackage{tikz}
 
 \setcounter{tocdepth}{2}
 
@@ -323,6 +325,12 @@ end
 
 \newpage
 \section{Архитектура генератора}
+
+\begin{figure}
+  \centering
+  \input{./images/architecture.tex}
+  \caption{Архитектура генератора}
+\end{figure}
 
 Инструментарий для $D^2NA$ состоит из двух пакетов:
 \begin{itemize}
@@ -908,9 +916,9 @@ $D^2NA$ должны складывать в специальный массив
 В начале каждый итерации старая популяция копируется в переменную
 \texttt{old\_population}, в в переменной \texttt{population} создаётся новая.
 
-При этом, перед итерацией $D^2NA$-код набравший максимальное значение оценочной
-функции и имеющий минимальный размер исходного кода без изменений копируется
-в новую популяцию.
+Чтобы в результате случайных изменений не ухудщить результат, перед итерацией
+$D^2NA$-код набравший максимальное значение оценочной функции и имеющий
+минимальный размер исходного кода без изменений копируется в новую популяцию.
 
 Текущая популяция находится в свойстве \texttt{population} класса
 \texttt{D2NA::Evolution} и имеет набор методов:
@@ -1078,7 +1086,7 @@ end
 \end{verbatim}
 
 \newpage
-\subsubsection{Синтаксис}
+\subsection{Синтаксис $D^2NA$}
 
 Ruby выделяет тем, что обладает довольно гибким синтаксисом:
 \begin{itemize}
