Добавил схему обрезки популяции

--- a/Диплом.tex
+++ b/Диплом.tex
@@ -930,6 +930,12 @@ $D^2NA$-код набравший максимальное значение оц
         (полученное для всех элементов первого слоя).
 \end{itemize}
 
+\begin{figure}
+  \centering
+  \input{./images/population.tex}
+  \caption{Пример обрезки популяции}
+\end{figure}
+
 \newpage
 \section{Программная реализация}
 
