Добавил описание классов в виртуальной машине

--- a/Диплом.tex
+++ b/Диплом.tex
@@ -939,16 +939,17 @@ $D^2NA$-код набравший максимальное значение оц
 \newpage
 \section{Программная реализация}
 
+Программная реализация виртуальной машины и генератора для $D^2NA$-программ
+полностью открыта и  вместе с историей изменений опубликована в Интернете по
+адресу \texttt{http://github.com/ai/d2na} на условиях свободной лицензии
+GNU GPL.
+
 \subsection{Средства разработки}
 
 Разработка велась на операционной системе Linux, поскольку являясь UNIX-подобной
 операционной системой она обладает целым набором полезным инструментов для
 разработки и позволяет программировать быстро и эффективно. Поэтому $D^2NA$
 разрабатывалась в духе идеологии UNIX.
-
-При разработке использовалась система контроля версий Git, а исходный код с
-историей изменения был опубликован на открытом ресурсу
-\texttt{http://github.com/ai/d2na} в Интернете.
 
 Для разработки $D^2NA$ требовался язык удовлетворяющий следующим критериям:
 \begin{itemize}
@@ -1137,6 +1138,92 @@ end
         Symbol-строки «Input» и «var» и код, который вызывает метод
         \texttt{send} с параметром «Output» и \texttt{down} с параметром «var».
 \end{enumerate}
+
+\newpage
+\subsection{Виртуальная машина}
+Виртуальная машина для языка $D^2NA$ представлена набором классов:
+\begin{itemize}
+  \item \texttt{D2NA::Rule} — одной правил программы, которое в исходном коде
+        определяется оператором \texttt{on}. Имеет методы:
+        \begin{itemize}
+          \item \texttt{conditions} — условие выполнения правила. Массив с
+                именами входящих сигналов или переменных.
+          \item \texttt{commands} — массив команд, вида\\
+                \texttt{[\textit{имя команды}, \textit{переменная или сигнал}]}.
+          \item \texttt{compiled} — скомпилированную версию списка команд для
+                быстрого выполнения.
+        \end{itemize}
+  \item \texttt{D2NA::Code} — программа на $D^2NA$. Методы:
+        \begin{itemize}
+          \item \texttt{rules} — массив правил программы.
+          \item \texttt{input\_signals} — массив с именами всех входящих
+                сигналов, которые используются в программе.
+          \item \texttt{output\_signals} — массив с именами всех исходящих
+                сигналов программы.
+          \item \texttt{states} — хеш всех переменных, которые используется
+                в программе, с именем переменной в ключах и её содержимым в
+                значениях хеша.
+          \item \texttt{length} — количество всех команд в программе.
+          \item \texttt{max\_depth} — максимальное количество циклов для
+                педотвращения зацикливания.
+          \item \texttt{conditions\_cache} — индекс для повышения
+                быстродействия. Это хеш в ключах хранит имя переменной или
+                входящего сигнала, а в значения — список правил, у которых эта
+                переменная или входящий сигнал есть в условии.
+          \item \texttt{required} — кеш для повышения быстродействия. Этот хеш
+                хранит в ключах правила программы, а в значении — сколько ещё
+                условий не удовлетворенно для запуска правила.
+        \end{itemize}
+  \item \texttt{D2NA::Recorder} — расширенная версия массива, которая
+        подключается к загруженному $D^2NA$-коду и помещает в себя все
+        исходящие из него сигналы. Служит для отладки, автоматического
+        тестирования и используется в макроязыке. Расширяется системный
+        Ruby-класс массивов \texttt{Array} добавляя в него методы:
+       \begin{itemize}
+          \item \texttt{initialize(code)} — меняет у \texttt{Array}
+                конструктор, принимая в \texttt{code} загруженный $D^2NA$-код,
+                исходящие сигналы которого нужно записывать. При загрузке
+                с помощью метод \texttt{listen} класса \texttt{D2NA::Code}
+                подключает свой метод \texttt{dispatch} для записи исходящих
+                сигналов.
+          \item \texttt{dispatch(code, signal)} — метод, которые будет вызывать
+                объектом класса \\ \texttt{D2NA::Code}, когда он будет посылать
+                исходящий сигнал. В \texttt{code} он передаст ссылку на самого
+                себя, а в \texttt{signal} — имя исходящего сигнала.
+        \end{itemize}
+  \item \texttt{D2NA::Console} — класс программы виртуальной машины. Он
+        работает с текстовым терминалом и стандартными входом и выходом
+        (\texttt{STDIN} и \texttt{STDOUT}), загружая код из указанного файла,
+        считывая введённые пользователем входящие сигналы и печатая исходящие
+        сигналы загруженного кода:
+        \begin{itemize}
+          \item \texttt{code} — загруженный код, объект класса
+                \texttt{D2NA::Code}.
+          \item \texttt{input} — поток для чтения команд. По умолчанию равен
+                \texttt{STDIN}. Переменная служит для того, чтобы во время
+                автоматического тестирования сменить проток входящих сигналов.
+          \item \texttt{output} — поток для чтения команд. По умолчанию равен
+                \texttt{STDOUT}. Переменная позволяет скрипту автоматического
+                тестирования сменить поток исходящих сигналов, чтобы проверить
+                что программа будет печатать на экран.
+          \item \texttt{prompt} — нужно ли печатать префикс: «<» перед
+                входящими сигналами и «>» — перед исходящими.
+          \item \texttt{color} — должен ли префикс перед входящими сигналами
+                печататься зелёным, а перед исходящими — красным.
+          \item \texttt{load(string)} — загрузить $D^2NA$-код, который
+                содержится в строке \texttt{string}.
+          \item \texttt{print(code, signal)} — метод, которые будет вызывать
+                объектом класса \\ \texttt{D2NA::Code}, когда он будет посылать
+                исходящий сигнал. При получении исходного сигнала в переменной
+                \texttt{signal} выведет его в поток указанный в \texttt{output}.
+          \item \texttt{read} — прочитать следующий входящий сигнал с потока
+                указанного в \texttt{input}. Метод будет ждать, пока во
+                входящем потоке не появится перевод строки.
+          \item \texttt{help} — вывести текст справки.
+          \item \texttt{invalid\_option(option)} — вывести текст о неизвестной
+                опции \texttt{option}.
+        \end{itemize}
+\end{itemize}
 
 \newpage
 \begin{thebibliography}{}
