Добавил заглавие к Аннотации

--- a/Аннотация.tex
+++ b/Аннотация.tex
@@ -14,7 +14,14 @@
 
 \begin{document}
 
-\section*{Аннотация}
+\begin{center}
+\textbf{Аннотация}\\
+К дипломной работе на тему
+\\«Использование генетических алгоритмов\\
+для автоматизированного написания программ»\\
+студента факультета «Технической кибернетики»\\
+Ситника Андрея Андреевича
+\end{center}
 
 Цель работы — создание инструментов для автоматического написания программ с
 помощью генетических алгоритмов.
