--- a/Диплом.tex
+++ b/Диплом.tex
@@ -1,5 +1,9 @@
 \documentclass[utf8,a5paper,portrait,12pt]{eskdtext}
 \usepackage{eskdplain}
+
+\usepackage[T2A]{fontenc}
+\usepackage{pscyr}
+
 \usepackage{pstricks}
 \usepackage{tikz}
 
