Добавил процесс загрузки через библиотеку

--- a/Диплом.tex
+++ b/Диплом.tex
@@ -1188,7 +1188,14 @@ end
                 \texttt{[\textit{имя команды}, \textit{переменная или сигнал}]}.
           \item \texttt{compiled} — скомпилированную версию списка команд для
                 быстрого выполнения.
+          \item \texttt{send(signal)} — добавляет в правило команду, посылающую
+                исходящий сигнал с именем из параметра \texttt{signal}.
+          \item \texttt{up(state)} — добавляет в правило команду, увеличивающую
+                значение переменной из параметра \texttt{state}.
+          \item \texttt{down(state)} — добавляет в правило команду, уменьшающую
+                значение переменной из параметра \texttt{state}.
         \end{itemize}
+  \newpage
   \item \texttt{D2NA::Code} — программа на $D^2NA$. Методы:
         \begin{itemize}
           \item \texttt{rules} — массив правил программы.
@@ -1202,6 +1209,9 @@ end
           \item \texttt{length} — количество всех команд в программе.
           \item \texttt{max\_depth} — максимальное количество циклов для
                 педотвращения зацикливания.
+          \item \texttt{on(*conditions, \&block)} — добавляет новое правило
+                с условиями из массива \texttt{conditions} и командами из блока
+                кода \texttt{block}.
           \item \texttt{conditions\_cache} — индекс для повышения
                 быстродействия. Это хеш в ключах хранит имя переменной или
                 входящего сигнала, а в значения — список правил, у которых эта
@@ -1249,7 +1259,7 @@ end
           \item \texttt{load(string)} — загрузить $D^2NA$-код, который
                 содержится в строке \texttt{string}.
           \item \texttt{print(code, signal)} — метод, которые будет вызывать
-                объектом класса \\ \texttt{D2NA::Code}, когда он будет посылать
+                объектом класса \texttt{D2NA::Code}, когда он будет посылать
                 исходящий сигнал. При получении исходного сигнала в переменной
                 \texttt{signal} выведет его в поток указанный в \texttt{output}.
           \item \texttt{read} — прочитать следующий входящий сигнал с потока
@@ -1260,6 +1270,60 @@ end
                 опции \texttt{option}.
         \end{itemize}
 \end{itemize}
+
+\subsubsection{Загрузка кода через библиотеку}
+
+Процесс загрузки $D^2NA$-кода через библиотеку интерпретатора:
+\begin{enumerate}
+  \item В пакете \texttt{d2na/vm} идёт файл \texttt{d2na-vm.rb}, который
+        загружает все классы виртуальной машины:
+
+        \begin{verbatim}
+        require 'd2na-vm'
+        \end{verbatim}
+
+        Классы \texttt{D2NA::Recorder} и \texttt{D2NA::Console} будут загружены
+        только в момент использования (с помощью \texttt{autoload}).
+  \item После загрузки нужных классов виртуальной машины, использующая её 
+        программа должна создать экземпляр класса\\ \texttt{D2NA::Code} и
+        передать конструктору блок с $D^2NA$-кодом:
+
+        \begin{verbatim}
+        code = D2NA::Code.new do
+          on :A do
+            send :C
+          end
+          on :B do
+            send :C
+          end
+        end
+        \end{verbatim}
+
+  \item Чтобы загрузить $D^2NA$-код объект класса \texttt{D2NA::Code} просто
+        вызывает переданный блок кода на себе (с помощью\\
+        \texttt{instance\_eval}). В итоге при загрузке вышеуказанного кода, у
+        объекта будет два раза вызван метод \texttt{on}.
+  \item Метод \texttt{on} после вызова создаёт создаёт новый объект класса
+        \texttt{D2NA::Rule} с переданными условиями и передаёт ему блок кода с
+        командами нового правила. В данном примере будет создано два объекта
+        \texttt{D2NA::Rule} с условиями поступления входящего сигнала
+        \texttt{:A} и \texttt{:B}.
+  \item Код должен заранее знать список используемых в нём переменных и
+        сигналов. Поэтому, правило сразу после создания вызывает метод у
+        создавшего его кода метод \texttt{input(signal)} для каждого входящего
+        сигнала в условии правила, а все переменные из условия помещает во
+        временный массив \texttt{@states}.
+  \item Далее правило вызывает на себе переданный ему блок команд. У объекта
+        \texttt{D2NA::Rule} есть методы на каждую возможную команду правила.
+        После вызова эти методы добавляют соответствующую команду в массив
+        \texttt{commands} и сохраняют используемые в команде исходящие сигналы и
+        переменные во временных массивах \texttt{@signals} и \texttt{@states},
+        соответственно.
+  \item После того, как все команды добавлены в правило, у правила есть список
+        всех используемых исходящих сигналов и переменных и оно передаёт их
+        создавшему правило коду, вызывая у него методы \texttt{output} и
+        \texttt{add\_state},соответственно.
+\end{enumerate}
 
 \newpage
 \begin{thebibliography}{}
