Добавил процесс загрузки через программу

--- a/Диплом.tex
+++ b/Диплом.tex
@@ -1282,8 +1282,9 @@ end
         require 'd2na-vm'
         \end{verbatim}
 
-        Классы \texttt{D2NA::Recorder} и \texttt{D2NA::Console} будут загружены
-        только в момент использования (с помощью \texttt{autoload}).
+        Поскольку классы \texttt{D2NA::Recorder} и \texttt{D2NA::Console} не
+        обязательно будут использоваться, то они с помощью \texttt{autoload}
+        будут загружены только в момент использования.
   \item После загрузки нужных классов виртуальной машины, использующая её 
         программа должна создать экземпляр класса\\ \texttt{D2NA::Code} и
         передать конструктору блок с $D^2NA$-кодом:
@@ -1323,6 +1324,33 @@ end
         всех используемых исходящих сигналов и переменных и оно передаёт их
         создавшему правило коду, вызывая у него методы \texttt{output} и
         \texttt{add\_state},соответственно.
+  \item Правило компилирует список своих команд в анонимную функцию с помощью
+        \texttt{eval}. Анонимная функция для каждой команду будет соответственно
+        вызывать методы \texttt{send\_out}, \texttt{state\_up} и
+        \texttt{state\_down} у объекта класса \texttt{D2NA::Code}.
+\end{enumerate}
+
+\subsubsection{Загрузка кода через программу}
+
+Программа интерпретатора находится в файле \texttt{bin/d2na-vm}. Для загрузки
+кода она наравне с другими программами использует библиотеку интерпретатора.
+
+При вызове файл \texttt{bin/d2na-vm}:
+\begin{enumerate}
+  \item Загружает библиотеку интерпретатора.
+  \item Создаёт объект класса \texttt{D2NA::Console}.
+  \item Анализирует аргументы переданные через текстовой и устанавливает
+        соответствующие настройки у объекта класса \texttt{D2NA::Console}.
+  \item Если файл с $D^2NA$-кодом не передан или передан аргументы \texttt{-h}
+        или \texttt{--help} вызывает метод \texttt{help} длч показа справки.
+  \item Если передан неизвестный аргумент, вызывает метод
+        \texttt{invalid\_option} для показа сообщения об ошибке.
+  \item Если ошибок не было, читает из переданного файла $D^2NA$-код и посылает
+        его объекту класса \texttt{D2NA::Console}.
+  \item В бесконечном цикле считывает имена входящих сигналов со стандартного
+        входа (\texttt{STDIN}).
+  \item По закрытию входящего потока (получению с него кода \texttt{ETX} об
+        окончании текста) — закрывает программу.
 \end{enumerate}
 
 \newpage
